--- a/config-server/src/main/resources/configs/feedback-rating.properties
+++ b/config-server/src/main/resources/configs/feedback-rating.properties
@@ -1,6 +1,4 @@
 server.port=9094
 spring.data.cassandra.keyspace-name=testfeedback
-#spring.data.cassandra.contact-points=
-#spring.data.cassandra.port=
-#spring.data.cassandra.password=
-#spring.data.cassandra.username=
+spring.data.cassandra.contact-points=35.165.146.25
+spring.data.cassandra.port=9042
