--- a/feedback-rating/pom.xml
+++ b/feedback-rating/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-common</artifactId>
+			<version>4.1.21.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
